[project]
name = "pesto"
version = "0.1.0"
description = "Pesto is an Incremental Computation (IC) framework for Python, in the spirit of [Salsa](https://github.com/salsa-rs/salsa), with extras."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["pyright>=1.1.411", "pytest>=9.1.1", "ruff>=0.15.20"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pesto"]

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownVariableType = false

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501", "D", "PLR2004"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "INP001", "FBT"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
